kubernetes/services/duplicati.yml
---
apiVersion: v1
kind: Service
metadata:
  name: duplicati
  namespace: default
spec:
  ports:
    - protocol: TCP
      name: web
      port: 8200
  selector:
    app: duplicati

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: duplicati
  namespace: default
spec:
  tls:
    - hosts:
        - duplicati.${DOMAIN_NAME}
      secretName: ${DOMAIN_NAME}-tls
  rules:
    - host: duplicati.${DOMAIN_NAME}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: duplicati
                port:
                  name: web

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: duplicati
  namespace: default
  labels:
    app: duplicati
  annotations:
    keel.sh/policy: force
    keel.sh/trigger: poll
    keel.sh/pollSchedule: "@weekly"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: duplicati
  template:
    metadata:
      labels:
        app: duplicati
    spec:
      affinity:
        nodeAffinity:
          # Only on NAS nodes
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: nas
                    operator: In
                    values:
                      - "true"
      containers:
        - name: app
          image: lscr.io/linuxserver/duplicati:latest
          resources:
            requests:
              memory: 512Mi
              cpu: 250m
            limits:
              memory: 1Gi
              cpu: 1000m
          ports:
            - name: web
              containerPort: 8200
          volumeMounts:
            - name: config
              mountPath: /config
            - name: backups
              mountPath: /backups
            - name: storage
              mountPath: /source
              readOnly: true
      volumes:
        - name: config
          hostPath:
            path: /storage/duplicati/config
        - name: backups
          hostPath:
            path: /storage/duplicati/backups
        - name: storage
          hostPath:
            path: /storage
